feat: Add employee portal registration, login, and CORS configuration
- Add EmployeeWelcomePage with navigation to login and register
- Add EmployeeRegisterPage with form validation and backend integration
- Update EmployeeLoginPage with navigation links
- Fix CORS configuration in PublicSecurityConfig and SecurityConfig
- Update authService to handle backend authentication response format
- Configure Vite proxy for direct service connections
- Update App.tsx routing for employee portal pages